--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="progress-container"><div id="progress-bar"></div></div>
 
     <div class="mobile-navbar">
-        <div class="brand">Peizazhe</div>
+        <div class="brand">Artikujt e Peizazhe të fjalës</div>
         <button class="burger-button" id="burger" onclick="toggleMobileMenu()">
             <span></span><span></span><span></span>
         </button>
@@ -35,7 +35,7 @@
     <div class="main-container">
         <aside class="sidebar" id="sidebar">
             <div class="sidebar-inner" id="sidebar-scroll">
-                <p class="library-header">LIBRARY</p>
+                <p class="library-header">Arkivi</p>
                 <ul id="book-list" class="menu-list"></ul>
                 <div id="scroll-anchor" style="height: 50px;"></div>
             </div>
